recent update with transitMarchandiseTest
