# project/app/Http/Resources/TransitMarchandisesResource.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class TransitMarchandisesResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            "transit" => $this->Transit,
+            "marchandise" => $this->Marchandise,
+            "quantite" => $this->quantite,
+            // Casting objects to string, to avoid receive create_at and update_at as object
+            'created_at' => (string) $this->created_at,
+            'updated_at' => (string) $this->updated_at
+        ]
+        ;
+        //parent::toArray($request);
+    }
+}
